# restaurant-sentiment

./: .env.example  .gitignore  README.md  app.py  explore_data.py  pyproject.toml  requirements.txt  run.py  start_app.py  test_app.py  test_aspect_sentiment.py  test_data_ingest.py  test_report_gen.py
instance/: business_sentiment.db  restaurant_sentiment.db
notebooks/: visualize_aspects.ipynb
reports/: joe's_pizza_20250706_220715.html  joe's_pizza_20250706_220715.json  mcdonald's_20250706_221438.json  olive_garden_20250706_221543.json  revon_restaurant_20250706_222041.json  revon_restaurant_20250706_222331.json  revon_restaurant_20250706_222555.json  revon_restaurant_20250706_223854.json
src/: aspect_sentiment.py  data_ingest.py  gemini_analyzer.py  main.py  report_gen.py  visualize_sentiment.py  web_scraper.py
templates/: add_company.html  base.html  company_detail.html  dashboard.html  home.html  login.html  report.html  report_detail.html  signup.html
webapp/: app.py
webapp/templates/: index.html  report.html
